/**
 * need:
 * vlc
 * yt-dlp
 * youtube logged-in firefox account
 */

plugins {
    id 'application'
    id 'idea'
}

idea {
    module {
        downloadSources = true
    }
}

group = 'net.cybercake.display'
version = '1.0.0'
mainClassName = "net.cybercake.display.Main"

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

repositories {
    mavenCentral()
    google()
}

dependencies {
    implementation 'com.google.api-client:google-api-client:2.6.0'
    implementation 'com.github.junrar:junrar:7.5.5'

//    implementation files('libs/jcef.jar') // Add JCEF JAR
    implementation 'me.friwi:jcefmaven:132.3.1'
    implementation 'org.xerial:sqlite-jdbc:3.41.2.2'
    implementation 'uk.co.caprica:vlcj:4.6.0'
}

application {
    String path = String.valueOf(project.rootDir) + File.separator + "libs" + File.separator + "jcef"
    applicationDefaultJvmArgs = [
            "-Djava.library.path=" + path,   // Path to native libraries
            "-Djcef.resources.dir=" + path  // Path to JCEF resources
    ]
    mainClass = 'net.cybercake.display.Main' // Replace with your application's main class
}